Worked on RobotContainer to setup swerve drive initialization and control.